<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps"> My Nanodegree Apps</string>
    <string name="popular_movies_1">Popular Movies App 1</string>
    <string name="popular_movies_2">Popular Moview App 2</string>
    <string name="super_duo"> Super Duo</string>
    <string name="go_ubiquitous"> Go ubiquitous</string>
    <string name="capstone_stage_1">Capstone Stage 1</string>
    <string name="capstone_stage_2">Capstone Stage 2</string>

</resources>
