<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView android:text="@string/nanodegree_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/popular_movies_1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/popular_movies_1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/popular_movies_2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/popular_movies_2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/super_duo_1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/super_duo"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/go_ubiquitous"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/go_ubiquitous"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/capstone_stage_1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/capstone_stage_1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/capstone_stage_2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/capstone_stage_2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />
</LinearLayout>
